MaerskLineAzEWvNetPOC slash 27.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "2.0.0.0",
    "parameters": {
        "networkSecurityGroups_NSG_Default_DTL_PoC_name": {
            "defaultValue": "NSG-Default-DTL-PoC",
            "type": "String"
        },
        "virtualNetworks_MaerskLineAzEWvNetPOC_name": {
            "defaultValue": "MaerskLineAzEWvNetPOC",
            "type": "String"
        }
    },
    "variables": {},
    "resources": [
        {
            "comments": "Generalized from resource: '/subscriptions/82cec58d-d1c3-4689-af03-435857568c99/resourceGroups/Default-Networking/providers/Microsoft.Network/networkSecurityGroups/NSG-Default-DTL-PoC'.",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[parameters('networkSecurityGroups_NSG_Default_DTL_PoC_name')]",
            "apiVersion": "2016-03-30",
            "location": "westeurope",
            "properties": {
                "securityRules": [
                    {
                        "name": "IBD-Block-All",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 4096,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "IBA-Allow-DTL-Comms",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "10.15.92.0/23",
                            "destinationAddressPrefix": "10.15.92.0/23",
                            "access": "Allow",
                            "priority": 4095,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "OBD-Block-All",
                        "properties": {
                            "description": "",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 4096,
                            "direction": "Outbound"
                        }
                    },
                    {
                        "name": "OBA-Allow-DTL-Comm",
                        "properties": {
                            "description": "",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "10.15.92.0/23",
                            "destinationAddressPrefix": "10.15.92.0/23",
                            "access": "Allow",
                            "priority": 4095,
                            "direction": "Outbound"
                        }
                    },
                    {
                        "name": "IBA-RDP-Maersknet",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "3389",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 4090,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "IBA-Telnet-MaerskNet",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 4080,
                            "direction": "Inbound"
                        }
                    }

                ]
            },
            "dependsOn": []
        },
        {
            "comments": "Generalized from resource: '/subscriptions/82cec58d-d1c3-4689-af03-435857568c99/resourceGroups/Default-Networking/providers/Microsoft.Network/virtualNetworks/MaerskLineAzEWvNetPOC'.",
            "type": "Microsoft.Network/virtualNetworks",
            "name": "[parameters('virtualNetworks_MaerskLineAzEWvNetPOC_name')]",
            "apiVersion": "2016-03-30",
            "location": "westeurope",
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "10.15.92.0/23"
                    ]
                },
                "subnets": [
                    {
                        "name": "iDMZ-Subnet-01",
                        "properties": {
                            "addressPrefix": "10.15.92.0/27"
                        }
                    },
                       {
                        "name": "eDMZ-Subnet-01",
                        "properties": {
                            "addressPrefix": "10.15.93.224/27"
                        }
                    },
                    {
                        "name": "Wren-Subnet-01",
                        "properties": {
                            "addressPrefix": "10.15.92.32/27",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_NSG_Default_DTL_PoC_name'))]"
                            }
                        }
                    },
                    {
                        "name": "Wren-Subnet-02",
                        "properties": {
                            "addressPrefix": "10.15.92.64/27",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_NSG_Default_DTL_PoC_name'))]"
                            }
                        }
                    },
                    {
                        "name": "Wren-Subnet-03",
                        "properties": {
                            "addressPrefix": "10.15.92.96/27",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_NSG_Default_DTL_PoC_name'))]"
                            }
                        }
                    },
                    {
                        "name": "Wren-Subnet-04",
                        "properties": {
                            "addressPrefix": "10.15.92.128/27",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_NSG_Default_DTL_PoC_name'))]"
                            }
                        }
                    },
                    {
                        "name": "DTL-Subnet-05",
                        "properties": {
                            "addressPrefix": "10.15.92.160/27",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_NSG_Default_DTL_PoC_name'))]"
                            }
                        }
                    },{
                        "name": "DTL-Subnet-06",
                        "properties": {
                            "addressPrefix": "10.15.92.192/27",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_NSG_Default_DTL_PoC_name'))]"
                            }
                        }
                    },{
                        "name": "DTL-Subnet-07",
                        "properties": {
                            "addressPrefix": "10.15.92.224/27",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_NSG_Default_DTL_PoC_name'))]"
                            }
                        }
                    },{
                        "name": "DTL-Subnet-08",
                        "properties": {
                            "addressPrefix": "10.15.93.0/27",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_NSG_Default_DTL_PoC_name'))]"
                            }
                        }
                    },{
                        "name": "DTL-Subnet-09",
                        "properties": {
                            "addressPrefix": "10.15.93.32/27",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_NSG_Default_DTL_PoC_name'))]"
                            }
                        }
                    },{
                        "name": "DTL-Subnet-10",
                        "properties": {
                            "addressPrefix": "10.15.93.64/27",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_NSG_Default_DTL_PoC_name'))]"
                            }
                        }
                    },{
                        "name": "DTL-Subnet-11",
                        "properties": {
                            "addressPrefix": "10.15.93.96/27",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_NSG_Default_DTL_PoC_name'))]"
                            }
                        }
                    },{
                        "name": "DTL-Subnet-12",
                        "properties": {
                            "addressPrefix": "10.15.93.128/27",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_NSG_Default_DTL_PoC_name'))]"
                            }
                        }
                    },{
                        "name": "DTL-Subnet-13",
                        "properties": {
                            "addressPrefix": "10.15.93.160/27",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_NSG_Default_DTL_PoC_name'))]"
                            }
                        }
                    },{
                        "name": "DTL-Subnet-14",
                        "properties": {
                            "addressPrefix": "10.15.93.192/27",
                            "networkSecurityGroup": {
                                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_NSG_Default_DTL_PoC_name'))]"
                            }
                        }
                    }
                 
                  
                ]
            },
            "dependsOn": []
        }
    ]
}
