NSG-Default-DTL-PoC.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "NSG-Default-DTL-PoC": {
            "defaultValue": "NSG-Default-DTL-PoC",
            "type": "string"
        }
    },
    "variables": {},
    "resources": [
        {
            "comments": "Generalized from resource: '/subscriptions/82cec58d-d1c3-4689-af03-435857568c99/resourceGroups/Default-Networking/providers/Microsoft.Network/networkSecurityGroups/NSG-DTLPOC-RemoteApp-Subnet-01'.",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "NSG-Default-DTL-PoC",
            "apiVersion": "2016-03-30",
            "location": "westeurope",
            "properties": {
                "securityRules": [
                    {
                        "name": "IBD-Block-All",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 4096,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "IBA-Allow-DTL-Comms",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "10.15.92.0/23",
                            "destinationAddressPrefix": "10.15.92.0/23",
                            "access": "Allow",
                            "priority": 4095,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "OBD-Block-All",
                        "properties": {
                            "description": "",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 4096,
                            "direction": "Outbound"
                        }
                    },
                    {
                        "name": "OBA-Allow-DTL-Comm",
                        "properties": {
                            "description": "",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "10.15.92.0/23",
                            "destinationAddressPrefix": "10.15.92.0/23",
                            "access": "Allow",
                            "priority": 4095,
                            "direction": "Outbound"
                        }
                    },
                    {
                        "name": "IBA-RDP-Maersknet",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "3389",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 4090,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "IBA-Telnet-MaerskNet",
                        "properties": {
                            "protocol": "Tcp",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "VirtualNetwork",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 4080,
                            "direction": "Inbound"
                        }
                    }
                ]
            },
            "dependsOn": []
        }
    ]
}
